Version 2.6.3: ??/??/??
	* Add support for Spidernet to IRC Helper plugin.
	* IRC Helper now supports suppressing messages from the Freenode bot
	  frigg.
	* IRC-More now builds when you pass --with-plugins=irc-more to configure.
	  (Ivan Ponomarev)

Version 2.6.2: 01/01/10
	* Fix IRC More plugin not properly rejoining channels.
	* IRC More no longer has a preference for auto rejoin delay--default to
	  100 milliseconds.
	* Splitter plugin now connects to signals with
	  PURPLE_SIGNAL_PRIORITY_HIGHEST, which makes it process messages last.
	* Splitter will not touch any messages generated by the OTR plugin,
	  resolving compatibility issues.
	* Splitter now resubmits split messages through the normal message
	  handling mechanisms in libpurple and tracks those resubmissions, meaning
	  splitting of messages will no longer bypass any other plugins
	  intercepting outgoing messages.
	* /exec's author list no longer makes the Pidgin plugins dialog wider.
	* Talkfilters is no longer a dependency of itself, allowing the plugin to
	  build. (pva)

Version 2.6.1: 12/07/09
	* Add support for limiting the number of bytes of history displayed by
	  the Enhanced History plugin.
	* Add a preference to the Google plugin to allow users to specify a
	  Google domain to use.  For example, www.google.com or www.google.fr.
	* Fix the "Set User Modes On Connect" and "Unset User Modes On Connect"
	  settings provided by irc-more on IRC accounts.
	* Fix Message Splitter so that it builds on Windows.
	* Fix Group Message so that its request dialog doesn't get too long.
	* Make IRC Helper suppress an additional message related to hostmasks.
	  (John Dennis)
	* Fix the Colorize plugin to be UTF-8 compliant.

Version 2.6.0: 08/30/09
	* Fix grouping of radio buttons in switchspell menu for enchant-enabled
	  GtkSpell.  This has the side effect of eliminating slow tab switching
	  and multiple language switches during menu drawing.  (Basil Gor)