@@ -3,7 +3,7 @@ type=default
 depends=purple
 provides=irc-more
 summary=Adds additional IRC features
-description=Adds additional IRC features, including a customizable quit message, a customizable CTCP VERSION reply, and the /notice command for notices where libpurple does not support it.
+description=Adds additional IRC features, including a customizable quit message, a customizable CTCP VERSION reply, a rudimentary channel autojoin list and the /notice command for notices where libpurple does not support it.
 authors=Sadrul Habib Chowdhury,John Bailey
 introduced=2.2.0
 notes=Support for /notice only when built with libpurple older than 2.4.0.
