@@ -4,6 +4,9 @@ Version 2.6.3: ??/??/??
 	  frigg.
 	* IRC-More now builds when you pass --with-plugins=irc-more to configure.
 	  (Ivan Ponomarev)
+	* IRC-More no longer tries to set umodes on connect if none are specified.
+	* IRC-More now provides a channel autojoin list.  Autojoins happen with a
+	  6-second delay to allow IRC Helper to do its job first.
 
 Version 2.6.2: 01/01/10
 	* Fix IRC More plugin not properly rejoining channels.
